samples/glossentry/invalid/R3.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <shortdesc>Short desc.</shortdesc>
  <glossterm>Term</glossterm>
  <glossdef><p>Definition.</p></glossdef>
</glossentry>